--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -12,7 +12,7 @@ Fonts are separated by a & */
   --accent2-color: #EDE7E3;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "Playfair Display";
+  --heading-font: "Playfair Display", "Trivia Serif", serif;
   --paragraph-font: "Poppins", Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
