--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,12 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,700&family=Poppins:wght@300&display=swap');
+
+
+
 #content {
     max-width: 1600px;
     margin: 0 auto;
+    font-size: 22px;
+    font-family: "Poppins", Helvetica, sans-serif;
 }
 
 nav a {
     text-align: center;
     color: white;
     text-decoration: none;
+    padding: 35px;
 }
 
 #hero-msg h1, #hero-msg h4 {
@@ -21,6 +28,10 @@ main section {
     text-align: center;
 }
 
+main section img {
+    box-sizing: border-box;
+}
+
 #background {
     height: 725px;
     background-color: #82C0CC;
@@ -28,6 +39,12 @@ main section {
 
 body {
     background-color: white;
+    margin: 0;
+    padding: 0;
+}
+
+h2 {
+    margin: 0;
 }
 
 header {
@@ -43,6 +60,10 @@ nav a:hover {   /*FIX THIS*/
     background-color: #447604;
     color: white;
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 
 .book:hover, .join:hover {
@@ -52,19 +73,26 @@ nav a:hover {   /*FIX THIS*/
 
 .msg {
     background-color: #447604;
+    line-height: 1.5em;
+    padding: 35px;
 }
 
 .msg h2 {
     color: white;
+    font-family: "Playfair Display", "Trivia Serif", serif;
 }
 
 .msg p {
     color: white;
+    font-size: .8em;
+    padding-bottom: 15px;
 }
 
 footer {
     background-color: #16697A;
     color: white;
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 
 footer a {
@@ -84,8 +112,15 @@ footer p a:hover {
     text-decoration: underline;
 }
 
+footer .social img {
+    padding-top: 15px;
+}
+
 .home-title {
     color: black;
+    font-family: "Playfair Display", "Trivia Serif", serif;
+    font-size: 2em;
+    margin-top: 10px;
 }
 
 h4 {
@@ -96,10 +131,26 @@ h4 {
     width: 80px;
 }
 
+.icon {
+    padding-top: 10px;
+}
+
 .logo {
     border-radius: 50%;
 }
 
+#logo_link {
+    padding-top: 5px;
+}
+
 #hero-img {
     width: 100%;
+}
+
+.card-img {
+    border: 10px solid black;
+}
+
+.rivers-card, .camping-card, .rapids-card {
+    margin: 200px 0;
 }
