--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -9,6 +9,11 @@
     font-family: "Poppins", Helvetica, sans-serif;
 }
 
+nav {
+    display: flex;
+    justify-content: space-around;
+}
+
 nav a {
     text-align: center;
     color: white;
@@ -16,8 +21,28 @@ nav a {
     padding: 35px;
 }
 
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+}
+
 #hero-msg h1, #hero-msg h4 {
     text-align: center;
+    color: white;
+}
+
+#hero-img {
+    width: 100%;
+}
+
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+}
+
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
 }
 
 .button-box {
@@ -32,9 +57,16 @@ main section img {
     box-sizing: border-box;
 }
 
+.home-grid {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+}
+
 #background {
     height: 725px;
     background-color: #82C0CC;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 
 body {
@@ -48,6 +80,8 @@ h2 {
 }
 
 header {
+    display: grid;
+    grid-template-columns: 150px auto;
     background-color: #16697A;
 }
 
@@ -75,6 +109,8 @@ nav a:hover {   /*FIX THIS*/
     background-color: #447604;
     line-height: 1.5em;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
 }
 
 .msg h2 {
@@ -93,6 +129,9 @@ footer {
     color: white;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 footer a {
@@ -141,16 +180,89 @@ h4 {
 
 #logo_link {
     padding-top: 5px;
-}
-
-#hero-img {
-    width: 100%;
+    justify-self: center;
+    align-self: center;
 }
 
 .card-img {
     border: 10px solid black;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+
+.card-img, .mountains {
+    width: 100%;
 }
 
 .rivers-card, .camping-card, .rapids-card {
     margin: 200px 0;
+    grid-row: 2/3;
+}
+
+.rivers-card {
+    grid-column: 2/4;
+}
+
+.camping-card {
+    grid-column: 5/7;
+}
+
+.rapids-card {
+    grid-column: 8/10;
+}
+
+.mountains {
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+
+
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
