--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -222,6 +222,71 @@ h4 {
     box-shadow: 5px 5px 10px #6f7364;
 }
 
+/* River Sub Page */
+
+.rivers-grid {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+}
+
+.rivers-card-img {
+    border: 10px solid black;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
+.idaho-card .utah-card .arizona-card {
+    margin-top: 200px;
+    margin-bottom: 200px;
+    width: 250px;
+    height: 250px;
+}
+
+.idaho-card {
+    grid-row: 1/2;
+    grid-column: 2/4;
+}
+
+.idaho-msg {
+    text-align: center;
+    margin-bottom: 200px;
+    grid-row: 1/2;
+    grid-column: 6/11;
+}
+
+.utah-card {
+    grid-row: 2/3;
+    grid-column: 2/4;
+}
+
+.utah-msg {
+    text-align: center;
+    margin-top: 200px;
+    margin-bottom: 200px;
+    grid-row: 2/3;
+    grid-column: 6/11;
+}
+
+.arizona-card {
+    grid-row: 3/4;
+    grid-column: 2/4;
+}
+
+.arizona-msg {
+    text-align: center;
+    margin-top: 200px;
+    margin-bottom: 200px;
+    grid-row: 3/4;
+    grid-column: 6/11;
+}
+
+#rivers-hero-img {
+    width: 100%;
+    height: 75%;
+}
+
+
+
+
 
 
 
