--- a/theaterreview/styles/style.css
+++ b/theaterreview/styles/style.css
@@ -1,76 +1,127 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,700&family=Poppins:wght@300&display=swap');
 
 
+#content {
+    max-width: 1500px;
+    margin: 0 auto;
+    font-size: 30px;
+    font-family: "Shantell Sans", "Poppins", sans-serif;
+}
+
 .logo {
     display: block;
     margin: 0 auto;
-    height: 500px;
-    width: 1750px;
+    height: 300px;
+    width: 1000px;
+    margin-bottom: 100px;
+    justify-self: center;
+    align-self: center;
 }
 
 nav {
     display: flex;
     justify-content: space-around;
+    padding: 50px;
+    margin: 50px;
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
 }
 
 nav a {
     text-align: center;
     color: black;
     text-decoration: none;
-    padding: 20px;
 }
 
-.welcome-msg p{
+nav a:hover {
+    color: gray;
+}
+
+.welcome-msg p, h2{
     justify-content: space-around;
     text-align: center;
-    padding: 200px;
+    margin-left: 100px;
+    margin-right: 100px;
 }
 
-.home-grid {
+.welcome-msg h2 {
+    padding-top: 200px;
+}
+
+.welcome-msg p {
+    padding-bottom: 200px;
+}
+
+main {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+}
+
+
+/* main {
     display: grid;
     grid-template-columns: 75px 1fr 1fr 1fr 1fr 1fr 75px;
-    grid-template-rows: repeat(4, 1fr);
+} */
+
+.home-grid {
+    display: inline-block;
 }
 
-.home-img {
-    display: flex;
+/* .home-img {
+    grid-row: 1/2;
+} */
+
+/* .eccles-img {
+    grid-column: 1/3;
+    height: 300px;
+    width: 300px;
+    margin: 100px;
+    border: 10px solid black;
 }
 
 .festival-img {
-    grid-column: 1/3;
-    height: 400px;
-    width: 500px;
-    margin: 100px
-}
-
-.eccles-img {
-    grid-column: 4/6;
-    height: 400px;
-    width: 500px;
+    grid-column: 3/6;
+    height: 300px;
+    width: 400px;
     margin: 100px;
+    border: 10px solid black;
 }
 
 .sister-img {
-    height: 400px;
-    width: 500px;
+    grid-column: 6/7;
+    height: 300px;
+    width: 300px;
     margin: 100px;
+    border: 10px solid black;
+} */
+
+.eccles-img {
+    grid-column: 2/4;
+    width: 100%;
+    border: 10px solid black;
+}
+
+.festival-img {
+    grid-column: 5/7;
+    width: 100%;
+    border: 10px solid black;
+}
+
+.sister-img {
+    grid-column: 8/10;
+    width: 100%;
+    border: 10px solid black;
 }
 
 .intro-msg {
-    display: grid;
-    grid-column: 3/6;
+    grid-column: 2/8;
     grid-row: 3/5;
+    justify-content: space-around;
     text-align: center;
-    
+    margin-top: 200px;
+    margin-right: 100px;
+    margin-left: 100px;
 }
-
-#content {
-    max-width: 1600px;
-    margin: 0 auto;
-    font-size: 22px;
-    font-family: "Shantell Sans", "Poppins", sans-serif;
-}
-
 
 
 footer {
@@ -89,7 +140,7 @@ footer a {
 }
 
 footer p {
-    font-size: 1.2em;
+    font-size: .75em;
 }
 
 footer a:hover {
@@ -164,31 +215,7 @@ h2 {
     margin: 0;
 }
 
-header {
-    display: grid;
-    grid-template-columns: 150px auto;
-    background-color: #16697A;
-}
 
-nav a:hover {
-    background-color: #EDE7E3;
-    color: white;
-}
-
-.book, .join {
-    background-color: #447604;
-    color: white;
-    text-decoration: none;
-    font-size: 18px;
-    padding: 15px 30px;
-    margin-top: 50px;
-    border-radius: 5px;
-}
-
-.book:hover, .join:hover {
-    background-color: #5C9D06;
-    color: white;
-}
 
 .msg {
     background-color: #447604;
@@ -219,27 +246,6 @@ footer {
     align-items: center;
 }
 
-footer a {
-    color: white;
-    text-decoration: none;
-}
-
-footer p {
-    font-size: 1.2em;
-}
-
-footer a:hover {
-    color: white;
-}
-
-footer p a:hover {
-    text-decoration: underline;
-}
-
-footer .social img {
-    padding-top: 15px;
-}
-
 .home-title {
     color: black;
     font-family: "Playfair Display", "Trivia Serif", serif;
@@ -249,10 +255,6 @@ footer .social img {
 
 h4 {
     color: black;
-}
-
-.logo, .icon {
-    width: 80px;
 }
 
 .icon {
