--- a/theaterreview/styles/style.css
+++ b/theaterreview/styles/style.css
@@ -126,7 +126,7 @@ main {
 
 
 footer {
-    background-color: black;
+    background-color: #0081A7;
     color: white;
     padding: 25px 50px;
     margin-top: 200px;
