--- a/theaterreview/styles/style.css
+++ b/theaterreview/styles/style.css
@@ -105,7 +105,7 @@ footer {
     background-color: #0081A7;
     color: white;
     padding: 25px 50px;
-    margin-top: 200px;
+    margin-top: 100px;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -136,7 +136,119 @@ footer .social img {
 /* Play Synopses Page */
 
 
+.wicked-card {
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+}
+.wicked-card h1 {
+    grid-column-start: 1;
+}
+.wicked-card img {
+    grid-column-start: 2;
+    padding-left: 75px;
+    height: 200px;
+    width: auto;
+}
+.wicked-card p {
+    grid-column: 2/8;
+    grid-row-start: 2;
+    padding-left: 100px;
+}
+.wicked-card #vertical-background {
+    background-color: #E2C312;
+    grid-column: 1;
+    grid-row-start: 2;
+}
+.wicked-card #horizontal-background {
+    background-color: #F06767;
+    grid-column: 2/8;
+    grid-row: 6;
+}
 
+.hansen-card {
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+}
+.hansen-card h1 {
+    grid-column: 1/4;
+}
+.hansen-card img {
+    grid-column-start: 4;
+    height: 200px;
+    width: auto;
+}
+.hansen-card p {
+    grid-column: 2/8;
+    grid-row-start: 2;
+    padding-left: 100px;
+}
+.hansen-card #vertical-background {
+    background-color: #E2C312;
+    grid-column: 1;
+    grid-row-start: 2;
+}
+.hansen-card #horizontal-background {
+    background-color: #F06767;
+    grid-column: 2/8;
+    grid-row: 6;
+}
+
+.hadestown-card {
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+}
+.hadestown-card h1 {
+    grid-column: 1/3;
+}
+.hadestown-card img {
+    grid-column-start: 3;
+    height: 200px;
+    width: auto;
+}
+.hadestown-card p {
+    grid-column: 2/8;
+    grid-row-start: 2;
+    padding-left: 100px;
+}
+.hadestown-card #vertical-background {
+    background-color: #E2C312;
+    grid-column: 1;
+    grid-row-start: 2;
+}
+.hadestown-card #horizontal-background {
+    background-color: #F06767;
+    grid-column: 2/8;
+    grid-row: 6;
+}
+
+.band-visit-card {
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+}
+.band-visit-card h1 {
+    grid-column: 1/3;
+}
+.band-visit-card img {
+    grid-column-start: 3;
+    padding-left: 75px;
+    height: 200px;
+    width: auto;
+}
+.band-visit-card p {
+    grid-column: 2/8;
+    grid-row-start: 2;
+    padding-left: 100px;
+}
+.band-visit-card #vertical-background {
+    background-color: #E2C312;
+    grid-column: 1;
+    grid-row-start: 2;
+}
+.band-visit-card #horizontal-background {
+    background-color: #F06767;
+    grid-column: 2/8;
+    grid-row: 6;
+}
 
 
 /* Web Component */
@@ -152,12 +264,13 @@ section a:hover {
 }
   
 section .previous {
-    background-color: #0081A7;
+    background-color: gray;
     color: white;
 }
   
 section .next {
-    background-color: #0081A7;
+    margin-top: 100px;
+    background-color: gray;
     color: white;
 }
   
